<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/tv_skmc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sicilia_kharkiv_mafia_club"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomes_you"
        android:textSize="25sp"
        android:layout_below="@id/tv_skmc"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/activitystart__login"
        android:text="@string/login"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/DarkRed"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activitystart__login"
        android:layout_marginTop="8dp"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/DarkRed"
        android:textColor="@android:color/white"/>

</RelativeLayout>