<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <include layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tv"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textColorHint="@color/LightGray"
                    android:textColor="@android:color/white"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/LightGray"
                    android:textColor="@android:color/white"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/DarkRed"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>