<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/current_profile_image"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_receipt_black_24dp"
                android:backgroundTint="@color/DarkRed"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                app:fabSize="normal"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_list_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_format_list_bulleted_black_24dp"
                android:backgroundTint="@color/colorGray"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fab_rules"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                app:fabSize="normal"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_in_talk_white_24dp"
                android:backgroundTint="@color/phoneColorGreen"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fab_list_players"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:fabSize="normal"/>

            <RelativeLayout
                android:id="@+id/linear_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>


                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/LightYellow"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nickname"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/DarkYellow"
                    android:textSize="18sp"
                    android:textStyle="normal" />


                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_city"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/LightGray"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/balance"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/txt_balance"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/oval_balance_button_red"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/copy_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_below="@id/balance"
                    android:text="@string/copy_card_number"
                    android:layout_marginBottom="15dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/holo_blue_light"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_all"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_add_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_amount"
                        android:inputType="number"
                        android:maxLength="4"
                        android:shadowColor="@color/colorGray"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGray"
                        android:textSize="26sp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        />

                    <Button
                        android:id="@+id/btn_withdraw"
                        style="@style/MinusButtons"
                        android:text="@string/withdraw"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@android:anim/slide_in_left"/>

                    <Button
                        android:id="@+id/btn_add_to_balance"
                        style="@style/PlusButtons"
                        android:text="@string/add_to_balance"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"/>



                </LinearLayout>

                <Button
                    android:id="@+id/button_set_to_zero"
                    style="@style/SetToZeroButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/set_to_zero" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_president"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_host"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingBottom="20dp"
                android:visibility="visible">

                <Switch
                    android:id="@+id/sw_set_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_host"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:theme="@style/MySwitch"
                    android:checked="false"/>


                <Switch
                    android:id="@+id/sw_set_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_admin"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:theme="@style/MySwitch"
                    android:checked="false"/>

                <Switch
                    android:id="@+id/sw_set_president"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_president"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:theme="@style/MySwitch"
                    android:checked="false"/>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
